- [fix] fixed the ui issue where content cannot be further scrolled down when height too low

--- a/src/renderer/styles/global.css
+++ b/src/renderer/styles/global.css
@@ -96,7 +96,7 @@ body {
 
 /* Content */
 .content {
-  height: 100%;
+  height: calc(95vh - 20px);
   padding: 14px;
   overflow: hidden;
   display: flex;
@@ -152,7 +152,7 @@ body {
     transform: translateX(-110%);
   }
   .content {
-    height: 100%;
+    height: calc(95vh - 30px);
     overflow: hidden;
     padding: 14px;
   }
